--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
                     <div class="col-lg-6">
                         <div class="hero-content">
                             <h1 class="wow fadeInUp" data-wow-delay=".3s">
-                                Dengan <span>HalalCertify, </span>
+                                Dengan <span>Halal, </span>
                                 Proses sertifikasi halal Cepat dan Terjangkau
                             </h1>
                             <p class="wow fadeInUp" data-wow-delay=".5s">
