--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
                     <div class="col-lg-6">
                         <div class="hero-content">
                             <h1 class="wow fadeInUp" data-wow-delay=".3s">
-                                Dengan <span>Halal, </span>
+                                Halal </span>
                             </h1>
                             <p class="wow fadeInUp" data-wow-delay=".5s">
                                 Dengan mendapatkan sertifikasi halal, Anda tidak hanya membangun kepercayaan yang lebih kuat dengan pelanggan, tetapi juga memastikan kepatuhan penuh terhadap regulasi halal yang diberlakukan oleh Pemerintah Republik Indonesia. Di HalalCertify, kami memahami pentingnya integritas dan kepercayaan dalam bisnis Anda, itulah sebabnya kami berkomitmen untuk mendampingi Anda sepanjang proses sertifikasi dari awal hingga akhir                            </p>
